# cold-sign

./: .gitignore  Cargo.toml  README.md
examples/: SimpleStorage.json
src/: constants.rs  main.rs
src/commands/: broadcast.rs  derive_key.rs  generate_mnemonic.rs  mod.rs  prepare.rs  prepare_interactive.rs  sign.rs
src/types/: mod.rs  prepare_output.rs  sign_output.rs
src/utils/: contract.rs  rpc.rs
