[package]
name = "cold-sign"
version = "0.1.0"
edition = "2021"
authors = ["Ethan"]
description = "Offline signer for EVM-compatible transactions"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ethers = { version = "2.0", features = ["legacy", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
hex = "0.4"
rpassword = "7.3"
rand = "0.8"
eth-keystore = "0.5"
